--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Aurélien's GitHub homepage
-description: Bookmark this to keep an eye on my project updates!
+title: GitHub homepage
+description: Aurélien Liné
